--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "rimraf dist && npx tsc",
+        "build": "npx tsc",
+        "build:dev": "rimraf dist && npx tsc",
         "start": "npm run build && node dist/index.js",
         "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
         "seed": "ts-node prisma/seed.ts",
@@ -30,6 +31,7 @@
         "multer": "^1.4.5-lts.1",
         "prisma": "^6.3.0",
         "rimraf": "^6.0.1",
+        "shx": "^0.4.0",
         "uuid": "^11.0.5"
     },
     "devDependencies": {
@@ -42,7 +44,6 @@
         "@types/uuid": "^10.0.0",
         "concurrently": "^9.1.2",
         "nodemon": "^3.1.9",
-        "shx": "^0.3.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3"
     }
