--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
         "prisma": "^6.3.0",
         "rimraf": "^6.0.1",
         "shx": "^0.4.0",
+        "typescript": "^5.8.3",
         "uuid": "^11.0.5"
     },
     "devDependencies": {
@@ -44,7 +45,6 @@
         "@types/uuid": "^10.0.0",
         "concurrently": "^9.1.2",
         "nodemon": "^3.1.9",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.7.3"
+        "ts-node": "^10.9.2"
     }
 }
