--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "npx tsc",
+        "build": "tsc",
         "build:dev": "rimraf dist && npx tsc",
         "start": "npm run build && node dist/index.js",
         "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
@@ -32,6 +32,7 @@
         "prisma": "^6.3.0",
         "rimraf": "^6.0.1",
         "shx": "^0.4.0",
+        "tsc": "^2.0.4",
         "typescript": "^5.8.3",
         "uuid": "^11.0.5"
     },
