--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "tsc",
-        "build:dev": "rimraf dist && npx tsc",
+        "build:test": "tsc",
+        "build": "rimraf dist && npx tsc",
         "start": "npm run build && node dist/index.js",
         "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
         "seed": "ts-node prisma/seed.ts",
