--- a/server/package.json
+++ b/server/package.json
@@ -37,10 +37,13 @@
         "uuid": "^11.0.5"
     },
     "devDependencies": {
+        "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.17",
-        "@types/jsonwebtoken": "^9.0.8",
+        "@types/express": "^5.0.3",
+        "@types/helmet": "^0.0.48",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.9",
-        "@types/multer": "^1.4.12",
+        "@types/multer": "^1.4.13",
         "@types/node": "^22.13.0",
         "@types/terraformer__wkt": "^2.0.3",
         "@types/uuid": "^10.0.0",
