--- a/server/package.json
+++ b/server/package.json
@@ -27,10 +27,12 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "fs": "^0.0.1-security",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "path": "^0.12.7",
         "prisma": "^6.3.0",
         "rimraf": "^6.0.1",
         "shx": "^0.4.0",
