--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
     "name": "real-estate-rent-location-server",
     "version": "1.0.0",
     "main": "index.js",
-    "type": "commonjs",
+    "type": "module",
+    "author": "HamzaMissaoui",
     "scripts": {
         "build:test": "rimraf dist && npx tsc",
         "build:2": "rimraf dist && tsc -p tsconfig.json --sourceMap",
@@ -14,7 +15,6 @@
         "postprisma:generate": "shx cp -r node_modules/.prisma/client/index.d.ts ../client/src/types/prismaTypes.d.ts"
     },
     "keywords": [],
-    "author": "Hamza",
     "license": "ISC",
     "description": "",
     "dependencies": {
