--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,12 +3,13 @@
         "target": "es2020",
         "module": "commonjs",
         "moduleResolution": "node",
-        // "lib": ["es2020"],
+        "lib": ["es2020"],
         "outDir": "./dist",
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
+        "noImplicitAny": false,
         "skipLibCheck": true,
         "types": ["node"]
     },
