--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build:test": "rimraf dist && npx tsc",
         "build:2": "rimraf dist && tsc -p tsconfig.json --sourceMap",
-        "build": "npx rimraf dist && npx tsc && tsc-alias",
+        "build": "rimraf dist && tsc",
         "start": "npm run build && node dist/index.js",
         "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
         "seed": "ts-node prisma/seed.ts",
@@ -34,7 +34,6 @@
         "multer": "^1.4.5-lts.1",
         "path": "^0.12.7",
         "prisma": "^6.3.0",
-        "rimraf": "^6.0.1",
         "shx": "^0.4.0",
         "uuid": "^11.0.5"
     },
@@ -46,10 +45,12 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.13",
+        "@types/node": "^24.0.14",
         "@types/terraformer__wkt": "^2.0.3",
         "@types/uuid": "^10.0.0",
         "concurrently": "^9.1.2",
         "nodemon": "^3.1.9",
+        "rimraf": "^6.0.1",
         "ts-node": "^10.9.2",
         "tsc-alias": "^1.8.16",
         "typescript": "^5.8.3"
