--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,8 +10,8 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "noImplicitAny": false,
-        "skipLibCheck": true
-        //     "types": ["node"]
+        "skipLibCheck": true,
+        "types": ["node"]
     },
     "include": ["src/**/*", "prisma/**/*"]
 }
