--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
     "name": "real-estate-rent-location-server",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "dist/index.js",
     "type": "module",
     "author": "HamzaMissaoui",
     "scripts": {
