--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "build:test": "rimraf dist && npx tsc",
         "build:2": "rimraf dist && tsc -p tsconfig.json --sourceMap",
-        "build": "npx rimraf dist && tsc && tsc-alias",
+        "build:dev": "npx rimraf dist && tsc && tsc-alias",
+        "build": "npm install --include=dev && npx rimraf dist && tsc -p tsconfig.json && tsc-alias",
         "start": "npm run build && node dist/index.js",
         "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
         "seed": "ts-node prisma/seed.ts",
